# chainlit-mcp-client

./: .env.example  .gitattributes  .gitignore  README.md  main.py  mcp.json  pyproject.toml  ui.py
core/: config.py  engine.py  llm.py  mcp_client.py  memory_store.py  settings.py  tokenizer.py
interfaces/: ui.py
